# Lab4-2025TO

./: .gitignore  CMakeLists.txt  README.md
src/: trapecio.cpp  trapecio.java
src/cpp/: CalculadorIntegral.cpp  CalculadorIntegral.h  CalculadorIntegralPool.cpp  CalculadorIntegralPool.h  Funcion.h  ThreadPool.cpp  ThreadPool.h  trapecio.cpp  trapecioPool.cpp
src/go/: trapecio.go
src/go/pool/: trapecioPool.go
src/java/: CalculadorIntegral.java  CalculadorIntegralPool.java  Funcion.java  ThreadPool.java  Trapecio.java  TrapecioPool.java
